--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-gunicorn
-Flask
-requests
-APScheduler
-python-dotenv
-Werkzeug
-
+Flask==3.0.2
+requests==2.31.0
+python-dotenv==1.0.1
+APScheduler==3.10.4
+gunicorn==21.2.0
