--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,7 @@
+
 services:
   - type: web
-    name: vectorsbot
-    env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
-    autoDeploy: true
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.8
+  name: vectorsbot
+  env: python
+  buildCommand: pip install -r requirements.txt
+  startCommand: gunicorn app:app
